# ado

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  install_requirements.sh
bindings/python/: README.md  RELEASE.md  build.sh  requirements.txt  setup.py
bindings/python/docs/: ado.rst  conf.py  index.rst
bindings/python/examples/: requirements.txt  svm.py  svm_fitting.ipynb
bindings/python/src/: ado.cpp  main.cpp  svm.cpp  svm.h
bindings/python/tests/: test_extension.py
docs/: Doxygen.in
examples/: CMakeLists.txt  svm_fitting.cpp
examples/cpp/: CMakeLists.txt  linear_svm_synthetic_data.cpp  mnist_fcn.cpp  svm_fitting.cpp  svm_synthetic_data.cpp
examples/data/: x_data.csv  y_data.csv
examples/data/occupancy/: README.txt  datatest.csv  datatest2.csv  datatraining.csv
examples/python/: requirements.txt  svm_fitting.ipynb  svm_real_data.ipynb  svm_synthetic_data.ipynb
include/ado/: constants.h  kernel.h  model.h  smo.h  svm.h  types.h
include/ado/core/: kernel.h  linear_svm.h  linear_svm_model.h  model.h  svm.h
include/ado/graph/: node.h  node.hpp  operator.h  operator.hpp  variable.h  variable.hpp
include/ado/layers/: activations.h  essentials.h  graph.h  layer.h
include/ado/losses/: loss.h
include/ado/math/: binary_functions.h  binary_operators.h  binary_operators.hpp  functions.h  unary_functions.h  unary_operators.h  unary_operators.hpp
include/ado/optimizers/: optimizer.h
include/ado/random/: seed.h
include/ado/utils/: io.h  logger.h  logger_buffer.h  logger_handler.h
include/ado/zoo/: linear_svm_model.h  mnist_fc_model.h
include/cauli/: model.h  smo.h
src/: kernel.cpp  smo.cpp  svm.cpp
src/core/: kernel.cpp  linear_svm.cpp  svm.cpp
src/random/: seed.cpp
src/utils/: io.cpp  logger.cpp  logger_buffer.cpp  logger_handler.cpp
test/: CMakeLists.txt
test/layers/: test_activations.cpp
test/math/: test_unary_operators.cpp
